feat: Criacao dos arquivos docker-file e docker-compose.yml

--- a/appsettings-local.json
+++ b/appsettings-local.json
@@ -4,7 +4,7 @@
     },
 
     "ConnectionStrings": {
-        "DefaultConnection": "Host=postgres;Port=5432;Database=financeiradb;Username=postgres;Password=postgres"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=financeiradb;Username=postgres;Password=postgres"
     },
 
     "Database": {
